2006-07-18  Tim Dwyer  <Tim.Dwyer@infotech.monash.edu.au>

	* src/graphlayout/graphlayout.cpp,
	  src/conn-avoid-ref.h:
	  We now use connector spacing to determine the minimum space required
	  between shape bounding boxes when graph layout with avoid overlap
	  constraints is applied.  This means that there should always be enough
	  room for connectors to route between shapes.  Also changed the default
	  connector spacing to a less extreme 3.

2006-07-17  Tim Dwyer  <Tim.Dwyer@infotech.monash.edu.au>

	* src/libcola/cola.h,
	  src/libcola/connected_components.cpp,
	  src/graphlayout/graphlayout.cpp:
	  Disconnected graphs are now handled more gracefully,
	  connected components are arranged separated (in place) and
	  then overlaps between components are removed.

2006-07-13  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/Makefile_insert, src/Makefile.am, src/svg/Makefile_insert,
	  src/xml/Makefile_insert, src/libnr/Makefile_insert:
	  Add "$(srcdir)/" to some things so that "make check" works in 
	  the case that the build directory is somewhere other than the
	  source directory.

	* src/sp-conn-end-pair.cpp, src/connector-context.cpp,
	  src/document.cpp, src/libavoid/*:
	  Update libavoid with upstream fixes, optimisations and new features.

2006-07-13  Tim Dwyer  <Tim.Dwyer@infotech.monash.edu.au>

	* src/libvpsc/*,
	  src/graphlayout/graphlayout.cpp:
	  Toggle on connector toolbar can force connectors with 
	  end-markers (arrows) to point downwards

2006-07-13  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/libavoid/router.cpp: Fixed a bug in the libavoid function
	  Router::attachedConns().  Previously unused, but needed by Tim
	  for new Graph Layout code.

2006-07-13  Jon Phillips  <jon@rejon.org>

	* src/inkview: Added commandline option capability to inkview and 
	  got code ready to add a timer for an automatic slideshow capability.

2006-07-12 Tim Dwyer  <Tim.Dwyer@infotech.monash.edu.au>

	* src/libvpsc/*,
	  src/libcola/*,