@@ -75,9 +75,9 @@ SPObject *CSwitch::_evaluateFirst() {
     return NULL;
 }
 
-GSList *CSwitch::_childList(bool add_ref, Action action) {
-    if ( ActionGeneral != action ) {
-        return CGroup::_childList(add_ref, action);
+GSList *CSwitch::_childList(bool add_ref, SPObject::Action action) {
+    if ( action != SPObject::ActionGeneral ) {
+        return _group->childList(add_ref, action);
     }
 
     SPObject *child = _evaluateFirst();
@@ -120,7 +120,7 @@ void CSwitch::_reevaluate(bool add_to_arena) {
     _releaseLastItem(_cached_item);
 
     SPItem * child;
-    for ( GSList *l = _childList(false, ActionShow);
+    for ( GSList *l = _childList(false, SPObject::ActionShow);
             NULL != l ; l = g_slist_remove (l, l->data))
     {
         SPObject *o = SP_OBJECT (l->data);
@@ -162,7 +162,7 @@ void CSwitch::_showChildren (NRArena *arena, NRArenaItem *ai, unsigned int key, 
     NRArenaItem *ac = NULL;
     NRArenaItem *ar = NULL;
     SPItem * child;
-    GSList *l = _childList(false, ActionShow);
+    GSList *l = _childList(false, SPObject::ActionShow);
     while (l) {
         SPObject *o = SP_OBJECT (l->data);
         if (SP_IS_ITEM (o)) {
